refactor: created interfaces for Services